--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta name="monetag" content="3fb84a174ed95a373e7cd87a60879fea">
-  <title>Bolt Unblocker</title>
+  <title>rekcolb tlob</title>
   <link rel="icon" type="image/x-icon" href="/assets/imgs/logos/boltlogo11.ico" />
   <link id="theme" rel="stylesheet" href="/assets/styles/main.css" />
   <script src="/baremux/index.js"></script>
@@ -36,7 +36,7 @@
   <div class="custom-tooltip" id="tooltip"></div>
   <iframe id="background" src=""></iframe>
   <div id="title">
-    <h3 id="small">Welcome to Bolt,</h2>
+    <h3 id="small">Welcome torekcolb tlob,</h2>
 
       <h1 id="big"></h1>
   </div>
